macros/tests/ui/preinit_safe.stderr
error: `#[pre_init]` function must have signature `unsafe fn()`
  --> tests/ui/preinit_safe.rs:11:1
   |
11 | fn foo() {}
   | ^^^^^^^^
